# FishEngine

./: .gitignore  LICENSE  README.md  cmake_osx.sh  cmake_win.bat  reference.md  todo.md
Engine/: CMakeLists.txt
Engine/Binary/: FishEditorLayout.json
Engine/Binary/Release/: FishEditorLayout.xml
Engine/CMake/: Common.cmake  Compiler.cmake  MacOSXBundleInfo.plist.in  Platform.cmake
Engine/CMake/FishEditor/: CMakeLists.txt
Engine/CMake/FishEditor_qt/: CMakeLists.txt
Engine/CMake/FishEngine/: CMakeLists.txt
Engine/CMake/FishGUI/: CMakeLists.txt
Engine/CMake/FishGame/: CMakeLists.txt
Engine/Include/FishEngine/: Animator.hpp  AudioClip.hpp  AudioClipLoadType.hpp  AudioDataLoadState.hpp  AudioListener.hpp  AudioSystem.hpp  Behaviour.hpp  BoneWeight.hpp  BoxCollider.hpp  Camera.hpp  CameraController.hpp  CapsuleCollider.hpp  Color.hpp  Command.hpp  Component.hpp  Component_gen.hpp  Cubemap.hpp  Flags.hpp  GL.hpp  GameObject.hpp  Gizmos.hpp  Graphics.hpp  HideFlags.hpp  IntVector.hpp  Macro.hpp  Material.hpp  Mathf.hpp  Matrix4x4.inl  Mesh.hpp  MeshCollider.hpp  MeshRenderer.hpp  Object.hpp  Pipeline.hpp  Prefab.hpp  PrimitiveType.hpp  Quaternion.inl  Ray.hpp  ReflectEnum.hpp  RenderBuffer.hpp  RenderSystem.hpp  (+16 more)
Engine/Include/FishGUI/: FishGUI.hpp  Theme.hpp
Engine/Shaders/: CascadedShadowMap.shader  DebugCSM.surf  Deferred.shader  Diffuse.surf  Diffuse.vert  DisplayCSM.shader  DrawQuad.shader  GatherScreenSpaceShadow.shader  Internal-BoneAnimation.shader  Internal-ErrorShader.shader  Internal-GPUSkinning.shader  NormalMap.shader  NormalMap.vert  NormalMap.vsfs  Outline.shader  PBR-Reference.surf  PBR.frag  PBR.surf  PBR.vert  PBR2.surf  ParallaxMap.shader  ParallaxMap.vsfs  PostProcessGaussianBlur.shader  PostProcessSelectionOutline.shader  PostProcessShadow.shader  ScreenTexture.shader  ShadowMap.shader  ShadowMap.vert  SkyBox-Cubed.shader  SkyBox-Cubed.vsfs  SkyBox-Panorama.shader  SkyBox-Procedural.shader  Skybox_6_Sided.vert  SolidColor.frag  SolidColor.shader  SolidColor.vert  Standard.surf  Template.vsfs  Texture.surf  TextureDoubleSided.surf  (+4 more)
Engine/Shaders/Editor/: Alpha.shader  SolidColor.shader  VertexLit.shader
Engine/Shaders/include/: Ambient.inc  AppData.inc  AppDataTan.inc  BRDF.inc  CG.inc  CGSupport.inc  CascadedShadowMapCommon.inc  Common.inc  CubemapCommon.inc  DeferredShadingCommon.inc  FragmentShaderShadow.inc  HLSLSupport.inc  MonteCarlo.inc  Random.inc  ShaderVariables.inc  Shadertoy.inc  ShadingModels.inc  ShadowCommon.inc  SurfaceShaderCommon.inc  UnitySupport.inc  UnrealSupport.inc
Engine/Source/Editor/: App.cpp  App.hpp  Asset.hpp  AssetArchive.cpp  AssetArchive.hpp  AssetDataBase.cpp  AssetDataBase.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterInspector.cpp  AssetImporterInspector.hpp  AudioImporter.cpp  AudioImporter.hpp  AudioImporterSampleSettings.hpp  CMakeLists.txt  DDSImporter.cpp  Editor.hpp  Editor.pro  EditorApplication.hpp  EditorGUI.cpp  EditorGUI.hpp  EditorRenderSystem.cpp  EditorResources.hpp  EditorUnility.cpp  EditorUnility.hpp  EditorUtility.hpp  FBXImporter.cpp  FBXImporter.hpp  FileInfo.cpp  FileInfo.hpp  FishEditor.hpp  FishEditorWindow.cpp  FishEditorWindow.hpp  GameObjectInspector.cpp  GameObjectInspector.hpp  GameObjectInspector.ui  Helper.hpp  HierarchyTreeView.cpp  HierarchyTreeView.hpp  HierarchyView.cpp  (+51 more)
Engine/Source/Editor_old/: App.hpp  EditorInput.cpp  EditorInput.hpp  EditorRenderSystem.hpp  EditorTime.hpp  EditorUnility.cpp  MaterialEditor.cpp  SceneViewEditor.cpp  SceneViewEditor.hpp  Selection.cpp  TestScript.hpp
Engine/Source/FishEditor/: Asset.hpp  AssetArchive.cpp  AssetDataBase.cpp  AssetDataBase.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterInspector.hpp  AudioImporterSampleSettings.hpp  DDSImporter.cpp  DDSImporter.hpp  Editor.cpp  Editor.hpp  Editor.pro  EditorApplication.cpp  EditorGUI.cpp  EditorGUI.hpp  EditorGUILayout.cpp  EditorGUILayout.hpp  EditorResources.hpp  FBXImporter.hpp  FileInfo.cpp  IPreviewable.hpp  Inspector.cpp  InspectorMode.hpp  MainEditor.cpp  ModelImporter.cpp  NativeFormatImporter.hpp  PrefabUtility.cpp  ProjectSettings.cpp  PropertyModification.cpp  SceneArchive.cpp  SceneViewEditor.cpp  SceneViewEditor.hpp  ScriptManager.cpp  SerializedObject.hpp  SerializedPropertyType.hpp  ShaderImporter.cpp  ShaderImporter.hpp  TextureImporter.cpp  main.cpp  (+1 more)
Engine/Source/FishEditor_qt/: Asset.cpp  AssetDataBase.cpp  AssetDataBase.hpp  AudioSampleRateSetting.hpp  DrawCameraMode.hpp  EditorApplication.hpp  EditorSceneManager.cpp  EditorUtility.cpp  NativeFormatImporter.cpp  PrefabUtility.hpp  PropertyModification.hpp  Selection.hpp  SerializedProperty.cpp  SerializedProperty.hpp
Engine/Source/FishEngine/: Camera.cpp  Common.cpp  Component_gen.cpp  Cubemap.cpp  Debug.cpp  Gizmos.cpp  Input.cpp  InstantiateObject.cpp  LayerMask.cpp  Light.cpp  MeshCollider.cpp  MeshFilter.cpp  Pipeline.cpp  ReflectClass.cpp  Scene.cpp  Screen.cpp  ScriptableObject.cpp  Timer.cpp
Example/Sponza/: CMakeLists.txt  Standard.shader  cmake_osx.sh  cmake_win.bat  diffuse_bump.shader  diffuse_mask_twosided.shader
cmake/: CMakeLists.txt
source/: Animator.cpp  Animator.hpp  App.cpp  App.hpp  AssetImporter.cpp  AssetImporter.hpp  Behaviour.cpp  Behaviour.hpp  Bounds.cpp  Bounds.hpp  BoxCollider.cpp  BoxCollider.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraController.hpp  CapsuleCollider.cpp  CapsuleCollider.hpp  Collider.cpp  Collider.hpp  Color.cpp  Common.cpp  Common.hpp  Component.cpp  Component.hpp  Component_gen.cpp  Component_gen.hpp  Debug.cpp  Debug.hpp  EditorGUI.cpp  EditorGUI.hpp  FishEngine.hpp  GLEnvironment.hpp  GameLoop.cpp  GameLoop.hpp  GameObject.cpp  GameObject.hpp  Gizmos.cpp  Gizmos.hpp  Input.cpp  (+59 more)
source/FishEditor/: Editor.cpp  Editor.hpp  EditorGUI.cpp  EditorGUI.hpp  EditorRenderSystem.cpp  EditorRenderSystem.hpp  EditorTime.cpp  EditorTime.hpp  FishEditor.hpp  FishEditorWindow.cpp  FishEditorWindow.hpp  SceneView.cpp  SceneView.hpp  Selection.cpp  Selection.hpp  TestScript.hpp  main.cpp
source/ShaderCompiler/: ShaderCompiler.cpp
(+683 files in other folders)
